# REST2_physics_fusion

./: README.md  base.yaml  dataset_new.yaml
rest2_physics_fusion/: README.md  logging_utils.py  pyproject.toml  requirements.txt
rest2_physics_fusion/data/real_enriched/: train_forecast_1d.csv  train_forecast_4h.csv  train_jiefang_station.csv  train_qingda_station.csv  train_solar_history.csv
rest2_physics_fusion/data/real_model_ready/: train_forecast_1d.csv  train_forecast_4h.csv  train_jiefang_station.csv  train_qingda_station.csv  train_solar_history.csv
rest2_physics_fusion/docs/: data_flow_before_pvlib.md  feature_contract.md
rest2_physics_fusion/scripts/: analyze_ablation.py  analyze_prediction_diagnostics.py  build_model_selection.py  build_physics_csv.py  check_clear_sky_backend.py  compare_clear_sky_backends.py  diagnose_physics_consistency.py  evaluate.py  evaluate_pooled_predictions.py  excel_to_model_ready.py  export_physics_vectors.py  export_predictions.py  export_selected_predictions.py  folsom_to_model_ready.py  generate_mock_training_csv.py  run_ablation.py  run_dataset_pipeline.py  run_smoke_tests.py  train.py  validate_mock_data.py  validate_physics_csv.py  valuate_pooled_predictions  visualize_outputs.py
rest2_physics_fusion/src/rest2_physics_fusion/: __init__.py
rest2_physics_fusion/src/rest2_physics_fusion/data/: __init__.py  merge_sources.py  preprocess.py  schema.py  windowing.py
rest2_physics_fusion/tests/: test_data_windowing.py  test_model_forward.py  test_physics_features.py  test_rest2_backends.py
(+15 files in other folders)
